--- a/covid.html
+++ b/covid.html
@@ -289,7 +289,8 @@
                     Quali sono gli effetti della campagna vaccinale?
                     </a>
                 <div class="descrizione corpo">
-                    I grafici mostrano i dati relativi al contagio da Covid-19 in relazione alle somministrazioni delle dosi di vaccino. Lo scopo è quello di monitorare efficacia dell’avanzamento delle vaccinazioni in relazione al numero di contagi, ospedalizzazioni e decessi.</div>
+                    I grafici mostrano i dati relativi al contagio da Covid-19 in relazione alle somministrazioni delle dosi di vaccino. Lo scopo è quello di monitorare efficacia dell’avanzamento delle vaccinazioni in relazione al numero di contagi, ospedalizzazioni e decessi.
+                    La soglia d’allerta del 30% per le terapie intensive è individuata dal decreto del Ministro della Salute del 30/4/2020.</div>
 
                 <div class="legenda">
                     <div class="sottotitolo">• LEGENDA:</div>
@@ -314,7 +315,7 @@
                     vizElement.style.height = (divElement.offsetWidth * 0.95) + 'px';
                 } else {
                     vizElement.style.width = '100%';
-                    vizElement.style.height = '2040px';
+                    vizElement.style.height = '1940px';
                 }
                 var scriptElement = document.createElement('script');
                 scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
